# RCalc

./: CMakeLists.txt  README.md  README.txt  reactos2calc.sh
reactos/: buildno.h
